# ai-toeic

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile
.forgejo/workflows/: build.yaml
backend/: main.py  pyproject.toml  test.py
backend/assets/: error.txt
backend/assets/submit/p1/: summary.txt  system.txt
backend/assets/submit/p2_3/: user.txt
backend/assets/submit/part_1/: system.txt
backend/assets/submit/part_2_3/: summary.txt  system.txt
backend/assets/topic/: part_1.txt  part_2.txt  part_3.txt  user.txt
backend/assets/topic/p1/: image.txt  system.txt  theme.json
backend/assets/topic/p2/: system.txt  theme.json
backend/assets/topic/p3/: system.txt  theme.json
backend/lib/: ai.py  db.py  env.py  exception.py  response.py  task.py  util.py
backend/route/: __init__.py  review.py  session.py  statistics.py  submission.py  topic.py
frontend/: .pnp.cjs  eslint.config.js  index.html  package.json  vite.config.ts
frontend/.yarn/sdks/eslint/lib/types/: config-api.d.ts  index.d.ts  rules.d.ts  universal.d.ts  use-at-your-own-risk.d.ts
frontend/src/: main.tsx
frontend/src/components/: Header.tsx
frontend/src/components/Topic/: Detail.tsx  Generate.tsx  Review.tsx  Submit.tsx
frontend/src/components/Topics/: List.tsx  Statistics.tsx
frontend/src/components/ui/: alert-dialog.tsx  button.tsx  hover-card.tsx  sonner.tsx
frontend/src/lib/: api.ts  typing.ts  utils.ts
frontend/src/pages/: Topic.tsx  Topics.tsx
